[package]
name = "openai_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
async-openai = "0.12.1"
#futures = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1" # 日志和追踪
tracing-subscriber ={version= "0.3.16",features=["env-filter","json"]} # 日志和追踪
#thiserror = "1.0.40"
anyhow = "1.0.71"
axum = "0.6.18"
clap = { version = "4.3.1", features = ["derive"] }
proc-macro2 = "1.0.63"


[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
#panic = 'abort'